# jwave

./: .gitignore  HISTORY.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
.requirements/: requirements-docs.txt  requirements-test.txt  requirements.txt
docs/: index.md
docs/install/: on_win.md
examples/: basic.py  helmholtz_problem.py  helmholtz_solver_differentiable.py  helmholtz_solver_sos.py  optimized.npz  optimized_sos.npz  preconditioning.py  uncertainty_propagation.py
jwave/: __init__.py  geometry.py  utils.py
jwave/acoustics/: pml.py  time_harmonic.py
jwave/experimental/: __init__.py  bicgstabl.py  new_solver.py
scripts/: jwave_win_install.ps1
tests/: test_kwave_helmholtz.py
tests/kwave_data/: README.md  helmholtz_homog_bicgstab.mat  helmholtz_homog_bicgstabl.mat
